<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/new_message_activity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/message_toolbar">

            <include layout="@layout/layout_messages_toolbar"/>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:inputType="phone"
            android:hint="Enter phone number" />

        <EditText
            android:id="@+id/sms_message"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@id/phone_number"
            android:layout_margin="16dp"
            android:hint="Write your message here...."
            android:inputType="textMultiLine"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btNewSend"
            android:text="Send Message"
            android:layout_centerInParent="true"
            android:layout_below="@+id/sms_message"
            android:layout_marginTop="16dp"
            />

    </RelativeLayout>

</LinearLayout>